<resources>
    <string name="app_name">小红书</string>
    <string name="rb_txt_home">首页</string>
    <string name="rb_txt_find">发现</string>
    <string name="rb_txt_shopping">购买</string>
    <string name="rb_txt_message">消息</string>
    <string name="rb_txt_my">我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
